--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 </head>
 <body>
 
-<h1>About</h1>
+<h1>SAM WOODBURY</h1>
+
+<h2>About</h2>
 <p>Raised in Vegas. Married to Madeline. Studying CS. Developing for Neighbor. <br>
 Interests: 
 <ul style="list-style-type:circle">
@@ -19,15 +21,15 @@ Interests:
 
 <hr>
 
-<h1>Projects</h1>
+<h2>Projects</h2>
 <p><a href="https://itunes.apple.com/us/app/neighbor-neighborhood-storage/id1323303687?mt=8">Neighbor App</a><br>
 <a href="https://github.com/sbwoodberry/Flashcards">Flashcards App</a>
 </p>
 
 <hr>
 
-<h1>Experience</h1>
-<h2>Education</h2>
+<h2>Experience</h2>
+<h3>Education</h3>
 <p>Brigham Young University<br>
 <ul>
   <li>Bachelor of Science in Computer Science</li>
@@ -38,7 +40,7 @@ Interests:
 </ul>
 </p>
 
-<h2>Work</h2>
+<h3>Work</h3>
 <p><ul>
   <li>Neighbor Storage - iOS Developer</li>
   <li>University Impact Fund - Senior Investment Associate</li>
@@ -47,13 +49,15 @@ Interests:
 </ul></p>
 <hr>
 
-<h1>Contact</h1>
+<h2>Contact</h2>
 <p>
 <ul>
   <li><a href="https://www.linkedin.com/in/samuel-woodbury-byu">LinkedIn</a></li>
   <li><a href="https://www.github.com">GitHub</a></li>
 </ul>
 </p>
+
+<hr>
 
 </body>
 </html>
