edited interests section

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ Interests:
   <li>Wake-surfing</li>
   <li>Snowboarding</li>
   <li>Musical Theatre</li>
-  <li>Yankees Baseball</li>
+  <li>Yankees' Baseball</li>
 </ul>
 </p>
 
