--- a/index.html
+++ b/index.html
@@ -2,63 +2,45 @@
 <html>
 <head>
 <title>Sam's Portfolio</title>
+<link rel="stylesheet" href="portfolio.css">
 </head>
+
+<div id = "menu">
+<ul>
+  <li><a href="index.html">Home</a></li>
+  <li><a href="projects.html">Projects</a></li>
+  <li><a href="experience.html">Experience</a></li>
+  <li><a href="contact.html">Contact</a></li>
+</ul>
+</div>
+
 <body>
 
-<h1>SAM WOODBURY</h1>
-<hr>
+<section>
+   <aside>
+      <h2>Contact Info</h2>
+      <p>Call me at 999-999-9999</p>
+   </aside>
+   <article>
+      <h1>Samuel Benjamin Woodbury</h1>
+		<hr>
 
-<h2>About</h2>
-<p>Raised in Vegas. Married to Madeline. Studying CS. Developing for Neighbor. <br>
-Interests: 
-<ul style="list-style-type:circle">
-  <li>Basketball</li>
-  <li>Wake-surfing</li>
-  <li>Snowboarding</li>
-  <li>Musical Theatre</li>
-  <li>Yankees Baseball</li>
-</ul>
-</p>
-
-<hr>
-
-<h2>Projects</h2>
-<p><a href="https://itunes.apple.com/us/app/neighbor-neighborhood-storage/id1323303687?mt=8">Neighbor App</a><br>
-<a href="https://github.com/sbwoodberry/Flashcards">Flashcards App</a>
-</p>
-
-<hr>
-
-<h2>Experience</h2>
-<h3>Education</h3>
-<p>Brigham Young University<br>
-<ul>
-  <li>Bachelor of Science in Computer Science</li>
-  <li>GPA: 3.92/4.0</li>
-  <li>ACT: 33/36</li>
-  <li>Member of the Developers Club, Finance Society, and Management Consulting Club</li>
-  <li>Awarded the Brigham Young Scholarship for academic excellence (full-tuition)</li>
-</ul>
-</p>
-
-<h3>Work</h3>
-<p><ul>
-  <li>Neighbor Storage - iOS Developer</li>
-  <li>University Impact Fund - Senior Investment Associate</li>
-  <li>CryptoBuzz - Market Researcher</li>
-  <li>Woodbury Law - Legal Assistant</li>
-</ul></p>
-<hr>
-
-<h2>Contact</h2>
-<p>
-<ul>
-  <li><a href="https://www.linkedin.com/in/samuel-woodbury-byu">LinkedIn</a></li>
-  <li><a href="https://www.github.com">GitHub</a></li>
-</ul>
-</p>
-
-<hr>
+		<div class = "content">
+		<h2>About</h2>
+		<p>Raised in Vegas. Married to Madeline. Studying CS. Developing for Neighbor. <br><br>
+		Interests: 
+		<ul style="list-style-type:circle">
+		  <li>Basketball</li>
+		  <li>Wake-surfing</li>
+		  <li>Snowboarding</li>
+		  <li>Musical Theatre</li>
+		  <li>Yankees Baseball</li>
+		</ul>
+		</p>
+		</div>
+   </article>
+</section>
 
 </body>
+
 </html>
